--- a/htmlcss/html+css1.html
+++ b/htmlcss/html+css1.html
@@ -27,13 +27,13 @@
         <h2>Making a HTML Document Editor</h2>
         <h3>Code Writing Software:</h3>
         <p>
-            In this lesson, we will be writing the code using the free code writing software, <a
+            In this lesson, we will be writing code using the free code writing software, <a
                 href="https://code.visualstudio.com">Visual Studio Code</a>. However, you can use almost any other
             simple code writing software.
         </p>
         <p>
             After you downloaded VS Code, create your own folder in the documents of your computer’s file explorer where
-            you can keep and organize all of the files in this course. In that folder, I made another file called, “HTML
+            you can keep and organize all of the files in this course. In that folder, I made a file called, “HTML
             CSS Website.”
         </p>
         <p>
@@ -57,9 +57,9 @@
         <img src="HTMLCSSImages/image4.png" alt="Name File">
 
         <p>
-            HTML is a very straightforward coding language where each item on the website that you want to be seen has
+            HTML is a very straightforward coding language where each part of the website has
             its own unique “tag.” However, to begin coding in HTML the first line of code must be
-            &lt;!DOCTYPE html> in order to let your computer browser know that it needs to interpret the HTML coding
+            &lt;!DOCTYPE html> in order to let a computer know that it needs to interpret the HTML coding
             language.
         </p>
         <p>
@@ -69,10 +69,10 @@
             &lt;/html> tag to be written below it.
         </p>
         <p>
-            Next, we will write a head to the webpage. Therefore, to define this action, press enter and write the
+            Next, as we are becoming more specific, we will write a head to the webpage. Therefore, to define this action, press enter and write the
             opening tag,
 
-            &lt;head> , pressing enter and seeing the closing tag of, &lt;/head>.
+            &lt;head> , and then again press enter and seeing the closing tag of, &lt;/head>.
         </p>
         <p>
             Within these tags we will write a title for the web browser, using &lt;title> Your Website Name!
@@ -98,8 +98,8 @@
             website. To do this, click to the right of the &lt;/head> tag (line 7) and press enter.
         </p>
         <p>
-            Using body tags, &lt;body>
-            &lt;/body> which defines the body of our website. In Between those we will add the web page header with
+            We will then Use body tags, &lt;body>
+            &lt;/body> which defines the body of our website. In Between those we will add a header with
             the &lt;h1>
             &lt;/h1> tags. We can say &lt;h1> Website Name&lt;/h1> . Note: For this tutorial we will be only using one
             header but you can add many &lt;h#>
@@ -156,6 +156,9 @@
     <code>&lt;/html></code>
           </pre>
         </section>
+        
+        <p>
+            Note how as mentioned in the begging of this lesson the code is becoming more and more specific, which is evident by the indentations of the lines of code.
 
         <p>
             Before we test our code, it is important that we make sure that all of our tags (except for the first
