--- a/htmlcss/html+css2.html
+++ b/htmlcss/html+css2.html
@@ -31,7 +31,7 @@
     </p>
     <p>
       First, we are going to create a button that links to a separate webpage where we can share photos, write a blog,
-      etc. beyond the home page. Do this by creating &lt;button>
+      etc. beyond the home page. Do this add &lt;button>
       &lt;/button> tags after the &lt;/p> tag. In the middle of the tags we will write the title of this next page:
       &lt;button> My Blog! &lt;/button> </p>
     <p>
@@ -62,11 +62,11 @@
 
     <hr class="hr-1">
     <p>
-      Now that we have a good amount of items on our website, we should begin styling it as it looks very bland.
+      Now that we have a good amount of items on our website, we should begin styling it as it looks very bland at the moment.
     </p>
     <p>
       To do this, we can simply add a <style> </style> tag. This is a simpler way to write CSS rather than creating a
-      brand new style.css file. As long as we write in between those tags, then we write in the CSS language!
+      brand new style.css file. As long as we write in between those tags following poroper CSS syntax and logic, then we can write in the CSS!
     </p>
     <section class="code">
       <pre>
@@ -99,11 +99,10 @@
 
     <p>
       In between the &lt;style> tag we are going to let the CSS know what we are talking about. Since CSS is a styling
-      language, we are going to begin adding color to this initial webpage. Therefore we use selectors to link
-      information from the html.
+      language, we are going to begin adding color to this initial webpage. Therefore we use selectors to tell the CSS what we want to style from the HTML.
     </p>
     <p>
-      To do this, write the tag from the html without the arrows (&lt;>) and add { after it. This is because each coding
+      To do this, write the tag from the html without the arrows (&lt;>) and add { after it. Note this way of writing code is different from HTML because each coding
       language is unique in its own way so there is always a variation to how they are written.
     </p>
     <section class="code">
@@ -190,7 +189,7 @@
       and so on.
     </p>
     <p>
-      Just as HTML uses arrows, &lt;> , to separate lines of code, CSS uses semicolons, ; , so use this to separate your
+      Just as HTML uses arrows, &lt;> , again, to separate lines of code, CSS uses semicolons, ; , so use this to separate your
       lines of CSS Code.
     </p>
     <p>
