--- a/htmlcss/html+css3.html
+++ b/htmlcss/html+css3.html
@@ -26,11 +26,11 @@
         <h2>Layout and Styling</h2>
         <h3></h3>
         <p>
-            In this lesson, we will begin to create a layout for our website using CSS and HTML and style it as well.
+            In this lesson, we will begin to create a layout for our website using CSS and HTML.
         </p>
         <p>
             Creating a layout for your website is extremely important to the overall organization and feel of the
-            website. Without it, the website can feel cluttered and the user experience won’t be positive.
+            website. Without it, the website can feel cluttered and the user experience will not be positive.
         </p>
         <p>
             To do this, within the HTML &lt;body> &lt;/body> tags we are going to add section tags, &lt;section>
@@ -38,7 +38,7 @@
         </p>
         <p>
             This will allow us to put more information into this webpage in an organized way. Similarly, the footer
-            section can contain general information and on many websites this where a copyright goes.
+            section can contain general information and on many websites this where a copyright, location, or basic contact information goes.
         </p>
         <p>
             The code should look like this:
@@ -61,7 +61,7 @@
 
         <hr class="hr-1">
         <p>
-            Now, with what we learned last lesson, we will style these sections and the footer as you would like.
+            Now, with what we learned last lesson, you can style these sections and the footer as you would like.
 
         </p>
         <p>
@@ -127,7 +127,7 @@
 
 
         <p>
-            The final part of this lesson’s layout and styling is to center the different parts to this webpage.
+            The final part of this lesson’s layout and styling is to center the different parts of this webpage.
         </p>
         <p>
             First, we are going to go to go into the CSS code under the body section. There, make sure there is ;
@@ -176,7 +176,7 @@
             lies within opening and closing brackets, ( { } ).
         </p>
         <p>
-            Finally, make sure you save your code before, File, Save or ctrl s before going into your files and testing
+            Finally, make sure you save your code before, File, Save or ctrl + s before going into your files and testing
             the file in your browser.
         </p>
 
