--- a/htmlcss/html+css4.html
+++ b/htmlcss/html+css4.html
@@ -36,7 +36,7 @@
         </p>
         <p>
             In regards to adding buttons, we learned this in a previous lesson. Under the first &lt;button>
-                &lt;/button> tag, you can simply add to more &lt;button>
+                &lt;/button> tag, you can simply add two more &lt;button>
                         &lt;/button> tags.
 
         </p>
