--- a/htmlcss/html+css5.html
+++ b/htmlcss/html+css5.html
@@ -25,8 +25,8 @@
         <hr class="hr-1">
         <h2>Images and Fonts</h2>
         <p>
-            In this lesson, we will learn how to add and modify an image, import fonts, and finally finish our front
-            webpage. Throughout this lesson you will have the freedom to design your webpage how you see best based upon
+            In this lesson, we will learn how to add and modify an image, import fonts, and finally finish our home
+            webpage. Throughout this lesson you will have the freedom to design your webpage how you see fits best based upon
             what was learned in the previous 4 lessons. After all, it is your website!
 
 
@@ -322,7 +322,7 @@
 
         </p>
         <p>
-            Of course style your website as you see fit and feel free to add or delete elements based on what we learned
+            Feel free to add or delete elements based on what we learned
             in previous lessons!
 
 
