--- a/htmlcss/html+css6.html
+++ b/htmlcss/html+css6.html
@@ -61,7 +61,7 @@
         <img src="HTMLCSSImages/image3_6.png" alt="Save As">
 
         <p>
-            Save this file as the name of the button .html. For example: myblog.html
+            Save this file as the name of the page .html. For example: myblog.html
 
 
         </p>
@@ -103,7 +103,7 @@
 
         </p>
         <p>
-            To link the buttons to the other pages.
+            To link the buttons to the other pages:
         </p>
         <section class="code">
 
@@ -116,7 +116,7 @@
 
         <p>
             The reason why we have the button tags now in the middle instead of as separate parts is because we want the
-            buttons themselves to be linked.
+            buttons themselves to be individually linked.
 
 
         </p>
@@ -290,7 +290,7 @@
 
         </p>
         <p>
-            The “rel” states the relationship between the two different types of code. The “href,” just as previously,
+            The “rel” states the relationship between the two different types of code. The “href” just as previously,
             creates the link to the other file.
 
 
