--- a/htmlcss/html+css7.html
+++ b/htmlcss/html+css7.html
@@ -25,11 +25,7 @@
         <hr class="hr-1">
         <h2>Classifying and Styling</h2>
         <p>
-            Now if we save and test our code we will see that our home page has the image and text but the other
-            webpages do not.
-        </p>
-        <p>
-            Next, we will be laying out and styling our other web pages so that you can write / add information in them.
+        In this lesson we will be laying out and styling our other web pages so that you can write / add information in them.
         </p>
         <p>
             To begin this process we need to create other html files.
@@ -128,7 +124,7 @@
 
         <p>
             To add more blog posts, simply go to the myblog.html file and copy and paste the as many sections as you
-            need above the previous blog:
+            need above the previous blog post:
         </p>
         <section class="code">
 
@@ -300,7 +296,7 @@
         </section>
 
         <p>
-            The new “float” element allows for the alignment of the photos one after another.
+            The new “float” element allows for the alignment of the photos to be one after another.
 
 
         </p>
