Fix Team section

--- a/learntocode.html
+++ b/learntocode.html
@@ -30,7 +30,7 @@
             <b>LEARN TO CODE TODAY</b>
         </h2>
         <section>
-            <p class="coding-info">
+            <p class="homepage-p">
                 Being able to write code is widely considered
                 to be one of the most relevant skills in the
                 present day. Technology dominates everyday life,
@@ -38,7 +38,7 @@
                 and all of these products are united as code
                 is what allows them to function as we know it.
             </p>
-            <p class="coding-info">
+            <p class="homepage-p">
                 The following lessons will provide you with a
                 general crash course on different coding languages
                 including HTML, CSS, Python, and JavaScript.
