--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <title>Next Gen Stem</title>
-    <link rel="faviicon" href="../images/NGT_HEADER.png" sizes="18x18">
+    <link rel="icon" href="../images/NGT_HEADER.png">
 </head>
 
 <body>
