--- a/htmlcss/html+css4.html
+++ b/htmlcss/html+css4.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../style.css" />
     <title>Next Gen Stem</title>
     <link rel="faviicon" href="../images/NGT_HEADER.png" sizes="18x18">
-    <link rel="faviicon" href="../images/NGT_HEADER.png" sizes="18x18">
+    <link rel="icon" href="../images/NGT_HEADER.png">
 </head>
 
 <body>
