--- a/htmlcss/html+css1.html
+++ b/htmlcss/html+css1.html
@@ -178,13 +178,13 @@
 
 
         <section class="next-previous-wrapper">
-            <a href="html-course-landing-page.html">&lt; Previous</a>
+            <a href="htmlcourseinfo.html">&lt; Previous</a>
             <a href="html+css2.html">Next &gt;</a>
         </section>
 
         <nav class="course-nav">
             <ul>
-                <li><a href="html-course-landing-page.html">Introduction</a></li>
+                <li><a href="htmlcourseinfo.html">Introduction</a></li>
                 <li><a href="html+css1.html">Lesson 1</a></li>
                 <li><a href="html+css2.html">Lesson 2</a></li>
                 <li><a href="html+css3.html">Lesson 3</a></li>
