--- a/htmlcss/html+css3.html
+++ b/htmlcss/html+css3.html
@@ -187,7 +187,7 @@
 
         <nav class="course-nav">
             <ul>
-                <li><a href="html-course-landing-page.html">Introduction</a></li>
+                <li><a href="htmlcourseinfo.html">Introduction</a></li>
                 <li><a href="html+css1.html">Lesson 1</a></li>
                 <li><a href="html+css2.html">Lesson 2</a></li>
                 <li><a href="html+css3.html">Lesson 3</a></li>
