--- a/htmlcss/htmlcourseinfo.html
+++ b/htmlcss/htmlcourseinfo.html
@@ -85,7 +85,7 @@
     <nav class="course-nav">
         <ul>
             <!-- Replace # with html file names of pages -->
-               <li><a href="html-course-landing-page.html">Introduction</a></li>
+               <li><a href="htmlcourseinfo.html">Introduction</a></li>
                 <li><a href="html+css1.html">Lesson 1</a></li>
                 <li><a href="html+css2.html">Lesson 2</a></li>
                 <li><a href="html+css3.html">Lesson 3</a></li>
