--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <ul class="nav-bottom-ul">
             <li><a href="javascript/js1.html" class="nav-bottom-link" id="javascript">JAVASCRIPT</a></li>
 
-            <li><a href="htmlcss/html-course-landing-page.html" class="nav-bottom-link" id="htmlcss">HTML+CSS</a></li>
+            <li><a href="htmlcss/htmlcourseinfo.html" class="nav-bottom-link" id="htmlcss">HTML+CSS</a></li>
 
             <li><a href="python/CourseLandingPage.html" class="nav-bottom-link" id="python">PYTHON</a></li>
 
