--- a/learntocode.html
+++ b/learntocode.html
@@ -65,7 +65,7 @@
             <li class="nav-bottom-effect"><a href="javascript/js1.html" class="nav-bottom-link"
                     id="javascript">JAVASCRIPT</a></li>
 
-            <li class="nav-bottom-effect"><a href="htmlcss/html-course-landing-page.html" class="nav-bottom-link" id="htmlcss">HTML+CSS</a></li>
+            <li class="nav-bottom-effect"><a href="htmlcss/htmlcourseinfo.html" class="nav-bottom-link" id="htmlcss">HTML+CSS</a></li>
 
             <li class="nav-bottom-effect"><a href="python/CourseLandingPage.html" class="nav-bottom-link" id="python">PYTHON</a></li>
 
