--- a/about.html
+++ b/about.html
@@ -131,5 +131,18 @@
                     style="width:65px; height:65px"></a>
         </footer>
 </body>
+= Tawk_API || {},
+        Tawk_LoadStart = new Date();
+    (function () {
+        var s1 = document.createElement("script"),
+            s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = chatSiteURL;
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
+    })();
 
+    //  End of Tawk.to Script
+</script>
 </html>
