--- a/about.html
+++ b/about.html
@@ -131,7 +131,18 @@
                     style="width:65px; height:65px"></a>
         </footer>
 </body>
-= Tawk_API || {},
+<script type="text/javascript">
+    //*****
+    //Change these params 
+    //Go to tawk.to and sign up for a user, enter your site domain and replace the following URL with the one they give you.
+    var /*<{*/ siteID /*}*/ = /*{*/ "5f29c48fed9d9d2627082f71" /*}>*/ ;
+    var chatSiteURL = 'https://embed.tawk.to/' + siteID + '/default';
+
+    //*****
+
+    // Start of Tawk.to Script
+
+    var Tawk_API = Tawk_API || {},
         Tawk_LoadStart = new Date();
     (function () {
         var s1 = document.createElement("script"),
