--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@
 <!-- Note: maybe implement vw later -->
 
 <head>
-    <link rel="faviicon" href="../images/NGT_HEADER.png" sizes="18x18">
     <meta charset="utf-8" />
     <meta name="keywords" content="HTML, CSS, JavaScript, Java, Python" />
     <meta name="description" content="Free programming tutorials" />
@@ -13,6 +12,7 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <title>Next Gen Stem</title>
+    <link rel="icon" href="../images/NGT_HEADER.png">
 </head>
 
 <body>
