--- a/learntocode.html
+++ b/learntocode.html
@@ -2,7 +2,6 @@
 <html lang="en-US">
 <!-- Note to self: option + shift + f to format code -->
 <!-- Note: maybe implement vw later -->
-
 <head>
     <meta charset="utf-8" />
     <meta name="keywords" content="HTML, CSS, JavaScript, Java, Python" />
@@ -12,7 +11,7 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <title>Next Gen Stem</title>
-    <link rel="faviicon" href="../images/NGT_HEADER.png" sizes="18x18">
+    <link rel="icon" href="../images/NGT_HEADER.png">
 </head>
 
 <body>
