--- a/javascript/js4.html
+++ b/javascript/js4.html
@@ -6,9 +6,11 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, Java, Python" />
     <meta name="description" content="Free programming tutorials" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
     <title>Next Gen Stem</title>
-    <link rel="faviicon" href="../images/NGT_HEADER.png" sizes="18x18">
+    <link rel="icon" href="../images/NGT_HEADER.png">
 </head>
 <!-- NOTE to self: alt + w to wrap text in a tag -->
 
@@ -641,5 +643,29 @@
 
     </footer>
 </body>
+<script type="text/javascript">
+    //*****
+    //Change these params 
+    //Go to tawk.to and sign up for a user, enter your site domain and replace the following URL with the one they give you.
+    var /*<{*/ siteID /*}*/ = /*{*/ "5f29c48fed9d9d2627082f71" /*}>*/ ;
+    var chatSiteURL = 'https://embed.tawk.to/' + siteID + '/default';
 
+    //*****
+
+    // Start of Tawk.to Script
+
+    var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+    (function () {
+        var s1 = document.createElement("script"),
+            s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = chatSiteURL;
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
+    })();
+
+    //  End of Tawk.to Script
+</script>
 </html>
