--- a/javascript/js10.html
+++ b/javascript/js10.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
 <head>
     <meta charset="utf-8" />
     <meta name="keywords" content="HTML, CSS, JavaScript, Java, Python" />
     <meta name="description" content="Free programming tutorials" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Next Gen Stem</title>
     <link rel="icon" href="../images/NGT_HEADER.png">
+
 </head>
 
 <!-- NOTE to self: alt + w to wrap text in a tag -->
