--- a/python/Lesson2.html
+++ b/python/Lesson2.html
@@ -56,9 +56,9 @@
             <li><a href="Lesson1.html">Lesson 1</a></li>
             <li><a href="Lesson2.html">Lesson 2</a></li>
             <li><a href="Lesson3.html">Lesson 3</a></li>
-            <li><a href="#">Lesson 4</a></li>
-            <li><a href="#">Lesson 5</a></li>
-            <li><a href="#">Lesson 6</a></li>
+            <li><a href="Lesson4.html">Lesson 4</a></li>
+            <li><a href="Lesson5.html">Lesson 5</a></li>
+            <li><a href="Lesson6.html">Lesson 6</a></li>
 
         </ul>
     </nav>
