remove mentions of live help

--- a/about.html
+++ b/about.html
@@ -49,9 +49,9 @@
             </p>
             <p class="homepage-p">
                 Next Gen STEM is constantly working to provide students with more
-                and more resources and ways to learn how to code. Whether through
-                courses that are taught through live instruction, video lessons,
-                written lessons, or a mix of all of the above, students will
+                and more resources and ways to learn how to code. Through
+                courses that are taught through video lessons or
+                written lessons, students will
                 be provided with the STEM education that works best for them at
                 no cost.
             </p>
