--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
             dependent on software and technology.
         </p>
         <p class="homepage-p">
-            Utilizing video, written, and live chat instruction
-            (through the icon on the bottom right of your screen)
+            Utilizing video and written instruction
             Next Gen STEM provides learning resources that fit the needs of any student.
         </p>
         <h2 class="homepage-h2">
