--- a/learntocode.html
+++ b/learntocode.html
@@ -41,9 +41,7 @@
                 The following lessons will provide you with a
                 general crash course on different coding languages
                 including HTML, CSS, Python, and JavaScript.
-                Each language is unique in its own way yet these
-                languages are what allows us to partake in our daily
-                lives! We recommend that you begin with the
+                Each language is unique and important for the functioning of everyday electronics! We recommend that you begin with the
                 “HTML + CSS” course if you are a first time coder in
                 order to get a background in web development.
             </p>
