--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             dependent on software and technology.
         </p>
         <p class="homepage-p">
-            Utilizing video and written instruction
+            Utilizing video and written instruction,
             Next Gen STEM provides learning resources that fit the needs of any student.
         </p>
         <h2 class="homepage-h2">
