--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                 that computer science courses should be valued the same as
                 common courses including math, science, history, and English.
                 Yet, about 40% of 9,774 principles surveyed said that
-                their schools offer 0 computer science courses at their school.
+                their schools offer 0 computer science courses.
             </p>
             <p class="homepage-p">
                 Next Gen STEM is constantly working to provide students with more
