--- a/about.html
+++ b/about.html
@@ -41,10 +41,10 @@
             <p class="homepage-p">
                 In a study performed by Google, 9 out of 10 parents believed
                 that Computer Science education would be a good use of resources
-                at schools and over 60% of superintendents and principals agree
+                at schools and over 60% of superintendents and principals agree 
                 that computer science courses should be valued the same as
                 common courses including math, science, history, and English.
-                Yet, about 40% of 9,774 principles surveyed said that
+                Yet, about 40% of 9,774 principals surveyed said that
                 their schools offer 0 computer science courses.
             </p>
             <p class="homepage-p">
