--- a/htmlcss/html+css6.html
+++ b/htmlcss/html+css6.html
@@ -38,13 +38,13 @@
 
         </p>
         <p>
-            To begin this process we need to create other html files.
+            First, we need to create other html files.
 
 
 
         </p>
         <p>
-            To do this in the brackets software click File → NewFile
+            To do this in the code writing software click File → NewFile
 
 
         </p>
@@ -264,7 +264,7 @@
         </section>
 
         <p>
-            Note how the index.html file does not contain a tag anymore.
+            Note how the index.html file does not contain a "style" tag anymore as the css is in its own file.
 
 
         </p>
@@ -275,7 +275,7 @@
 
         </p>
         <p>
-            Below the tag in the index.html file, add a tag.
+            Below the "head" tag in the index.html file, add a new tag.
 
 
         </p>
@@ -342,7 +342,7 @@
 
 
         <p>
-            Now let’s see how this part of our website looks!
+            Now we have new webpages. In the next lesson, we will edit and style them.
 
 
         </p>
