--- a/learntocode.html
+++ b/learntocode.html
@@ -30,12 +30,12 @@
         </h2>
         <section>
             <p class="homepage-p">
-                Being able to write code is widely considered
+                Being able to write code is considered
                 to be one of the most relevant skills in the
                 present day. Technology dominates everyday life,
                 and our smartphones, computers, video games, registers, 
-                and all of these products are united as code
-                is what allows them to function as we know it.
+                are all united as code is what allows them to function 
+                as we know it.
             </p>
             <p class="homepage-p">
                 The following lessons will provide you with a
